plugins {
	id "java"
	id "application"
	id "eclipse"
}

repositories {
	mavenCentral()
}

tasks.withType(JavaCompile) {
	targetCompatibility = "1.8"
	options.encoding = "UTF-8"
}

application {
	mainClass = "frost.Frost"
	applicationDefaultJvmArgs = ["-Xmx256M"]
}

dependencies {
	implementation("org.slf4j:slf4j-api:2.0.9")
	implementation("org.slf4j:jul-to-slf4j:2.0.9")
	implementation("ch.qos.logback:logback-core:1.3.11")
	implementation("ch.qos.logback:logback-classic:1.3.11")
	implementation(files("lib/perst-jdk16-421.jar"))
	implementation("org.bouncycastle:bcprov-jdk18on:1.76")
	implementation("com.toedter:jcalendar:1.4")
	implementation("joda-time:joda-time:2.12.5")
	testImplementation(platform("org.junit:junit-bom:5.10.1"))
	testImplementation("org.junit.jupiter:junit-jupiter")
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
	useJUnitPlatform()
}
